# semantic-id

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: advanced_usage.py  rq_vae_example.py  tutorial_ag_news.ipynb
src/semantic_id/: __init__.py  core.py  engine.py  exceptions.py
src/semantic_id/algorithms/: __init__.py  rq_kmeans.py  rq_kmeans_plus.py  rq_kmeans_torch.py  rq_vae.py  rq_vae_module.py  rq_vae_modules.py
src/semantic_id/uniqueness/: resolver.py  stores.py
src/semantic_id/utils/: clustering.py  metrics.py
tests/: conftest.py  test_backend_equivalence.py  test_cosine_metric.py  test_engine.py  test_integration.py  test_metrics.py  test_rq_kmeans.py  test_rq_vae.py  test_rq_vae_training.py  test_sinkhorn_resolver.py  test_token_format.py  test_torch_backend.py  test_torch_kmeans_plus_plus.py  test_uniqueness.py  test_validation.py
