[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-id"
version = "0.2.0"
description = "A library for generating semantic IDs from embeddings using RQ-KMeans and other algorithms."
authors = [
  { name="Mikhail", email="mikhail@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "k-means-constrained",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
